# ytdlp_tg_bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  ad.json.example  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
data/: bot.db
docs/: RPD.md
src/ytdlp_bot/: __init__.py  ads.py  bot.py  compressor.py  config.py  db.py  downloader.py  main.py  patterns.py
tests/: test_bot.py  test_compressor.py  test_config.py  test_downloader.py  test_patterns.py
